Cambios al html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola estudiantes 
+        Hola amigos, ya logré incorporar una repo a github
     </p>
 </body>
 </html>
